--- a/www/index.html
+++ b/www/index.html
@@ -4,12 +4,12 @@
 <div class="infoTab" id="whats-new">
 <h5 class="infoHeader">What's New</h5>
 <ul>
-<li>News item goes here</li>
-<li>More news items go here</li>
-<li><a href="http://www.mozdev.org/">mozdev.org</a></li>
+<li>14.13.2008 SystemProxy version 1.0 is released</li>
+<li>10.13.2008 The SystemProxy project has moved to http://systemproxy.mozdev.org/</li>
 </ul>
 </div>
 
+<!--
 <div class="infoTab" id="other-stuff">
 <h5 class="infoHeader">Other Stuff</h5>
 <ul>
@@ -17,6 +17,7 @@
 <li>more stuff goes here</li>
 </ul>
 </div>
+-->
 
 <!-- alternative image/table base tab works better in NS4 -->
 <!--
@@ -33,7 +34,7 @@
 <!-- ***************** INFO/NEWS *************** -->
 
 <!-- MAIN CONTENT -->
-<p>The <strong>systemproxy</strong> project content goes here.</p>
+<p><strong>System Proxy</strong> is an extension that enables Firefox and Thunderbird to read proxy settings from the Mac OS X  System Preferences and be aware of network location changes.</p>
 
-<p><strong>Note:</strong> If you want to add an area for user feedback to any of your pages, take a look at the <a href="notes.html">notes.html</a>
-template.</p>
+<!--<p><strong>Note:</strong> If you want to add an area for user feedback to any of your pages, take a look at the <a href="notes.html">notes.html</a>
+template.</p>-->
