--- a/www/index.html
+++ b/www/index.html
@@ -4,8 +4,7 @@
 <div class="infoTab" id="whats-new">
 <h5 class="infoHeader">What's New</h5>
 <ul>
-<li>14.13.2008 SystemProxy version 1.0 is released</li>
-<li>10.13.2008 The SystemProxy project has moved to http://systemproxy.mozdev.org/</li>
+<li>SystemProxy version 1.0 is released</li>
 </ul>
 </div>
 
