--- a/www/installation.html
+++ b/www/installation.html
@@ -1,9 +1,9 @@
 <!-- MAIN CONTENT -->
 <h5 class="page-header"><a id="content" name="content">Installation</a></h5>
 
-<p><a href="http://downloads.mozdev.org/systemproxy/FILENAME.xpi">XPI INSTALL LINK</a></p>
+<p><a href="http://downloads.mozdev.org/systemproxy/systemproxy-0.1.xpi">SystemProxy 1.0</a></p>
 
-<p><a href="https://www.mozdev.org/projects/overview/systemproxy/">Secure Installation for Extensions</a></p>
+<!--<p><a href="https://www.mozdev.org/projects/overview/systemproxy/">Secure Installation for Extensions</a></p>
 
 <p>
 <b>NOTES TO OWNERS:</b>
@@ -19,4 +19,4 @@
   is a tool for digitally signing your extensions and supporting automatic
   extension updating for FireFox versions 3.0 and later.</li>
 </ol>
-</p>
+</p>-->
