--- a/www/footer.html
+++ b/www/footer.html
@@ -10,5 +10,16 @@
     <a href="http://www.mozdev.org/copyright.html">Copyright</a> &copy; 2004. All rights reserved. 
     <a href="http://www.mozdev.org/community/terms.html">Terms of Use</a>.
     </p>
+<!-- Start of StatCounter Code -->
+<script type="text/javascript">
+var sc_project=4115699; 
+var sc_invisible=1; 
+var sc_partition=49; 
+var sc_click_stat=1; 
+var sc_security="5940acd0"; 
+</script>
+
+<script type="text/javascript" src="http://www.statcounter.com/counter/counter_xhtml.js"></script><noscript><div class="statcounter"><a title="free web stats" class="statcounter" href="http://www.statcounter.com/free_web_stats.html"><img class="statcounter" src="http://c.statcounter.com/4115699/0/5940acd0/1/" alt="free web stats" /></a></div></noscript>
+<!-- End of StatCounter Code -->
 </body>
 </html>
