--- a/www/footer.html
+++ b/www/footer.html
@@ -1,7 +1,7 @@
     </div>
 
     <p id="mozdev-feedback">
-    For questions or comments about $project, please send a message to the
+    For questions or comments about project, please send a message to the
     <a href="http://www.mozdev.org/mailman/listinfo/systemproxy">systemproxy mailing list</a>.<br>
 
     <!-- For general site related questions or comments, -->
