--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,15 @@
 
 <!-- MAIN CONTENT -->
 <p><strong>System Proxy</strong> is an extension that enables Firefox and Thunderbird to read proxy settings from the Mac OS X  System Preferences and be aware of network location changes.</p>
+<p>You can help this project in many ways:
+    <ul>
+        <li>Tell your friends about it!</li>
+        <li>Mention it in your blog or your favourite forum!</li>
+        <li>Add it to your favourite online bookmark service!</li>
+        <li>Contribute translations for other languages!</li>
+        <li>Submit installation reports!</li>
+    </ul>
+Please use our <a href="mailto:systemproxy@mozdev.mozdev.org">mailing list</a> for feedback!</p>
 
 <!--<p><strong>Note:</strong> If you want to add an area for user feedback to any of your pages, take a look at the <a href="notes.html">notes.html</a>
 template.</p>-->
