--- a/www/index.html
+++ b/www/index.html
@@ -3,8 +3,7 @@
 <div id="infoTabs">
 <div class="infoTab" id="whats-new">
 <h5 class="infoHeader">What's New</h5>
-<ul>
-<li>SystemProxy version 1.0 is released</li>
+<ul><li>SystemProxy version 1.0 is released</li>
 </ul>
 </div>
 
@@ -33,7 +32,7 @@
 <!-- ***************** INFO/NEWS *************** -->
 
 <!-- MAIN CONTENT -->
-<p><strong>System Proxy</strong> is an extension that enables Firefox and Thunderbird to read proxy settings from the Mac OS X  System Preferences and be aware of network location changes.</p>
+<p><strong>System Proxy</strong> is an extension that enables Firefox and Thunderbird to read proxy settings from the <br/>Mac OS X System Preferences and be aware of network location changes. Proceed to the <a href="installation.html">installation page</a>.</p>
 <p>You can help this project in many ways:
     <ul>
         <li>Tell your friends about it!</li>
@@ -42,7 +41,8 @@
         <li>Contribute translations for other languages!</li>
         <li>Submit installation reports!</li>
     </ul>
-Please use our <a href="mailto:systemproxy@mozdev.mozdev.org">mailing list</a> for feedback!</p>
+</p>
+<p>Please use our <a href="mailto:systemproxy@mozdev.mozdev.org">mailing list</a> for feedback!</p>
 
 <!--<p><strong>Note:</strong> If you want to add an area for user feedback to any of your pages, take a look at the <a href="notes.html">notes.html</a>
 template.</p>-->
