--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,8 @@
 <div id="infoTabs">
 <div class="infoTab" id="whats-new">
 <h5 class="infoHeader">What's New</h5>
-<ul><li>SystemProxy version 1.0 is released</li>
+<ul><li>16.10.08 Version 1.1 is released</li>
+<ul><li>14.10.08 Version 1.0 is released</li>
 </ul>
 </div>
 
