--- a/www/installation.html
+++ b/www/installation.html
@@ -1,7 +1,8 @@
 <!-- MAIN CONTENT -->
 <h5 class="page-header"><a id="content" name="content">Installation</a></h5>
 
-<p><a href="http://downloads.mozdev.org/systemproxy/systemproxy-1.0.xpi">SystemProxy 1.0</a></p>
+<p><strong>Current version: <a href="http://downloads.mozdev.org/systemproxy/systemproxy-1.1.xpi">SystemProxy 1.1</a></strong></p>
+<p>Previous version: <a href="http://downloads.mozdev.org/systemproxy/systemproxy-1.0.xpi">SystemProxy 1.0</a></p>
 
 <!--<p><a href="https://www.mozdev.org/projects/overview/systemproxy/">Secure Installation for Extensions</a></p>
 
