--- a/www/installation.html
+++ b/www/installation.html
@@ -1,10 +1,10 @@
 <!-- MAIN CONTENT -->
 <h5 class="page-header"><a id="content" name="content">Installation</a></h5>
 
-<p><strong>Current version:</strong> <a href="http://downloads.mozdev.org/systemproxy/systemproxy-1.1.xpi">SystemProxy 1.1</a>
+<p><strong>Current version:</strong> <a href="http://downloads.mozdev.org/systemproxy/systemproxy-1.1.xpi">SystemProxy 1.1</a>. New features:
     <ul>
         <li><a href="http://getsongbird.com/">Songbird</a> support</li>
-        <li>Added French localization</li>
+        <li>French localization</li>
     </ul>
 </p>
 <p>Previous version: <a href="http://downloads.mozdev.org/systemproxy/systemproxy-1.0.xpi">SystemProxy 1.0</a></p>
