--- a/www/installation.html
+++ b/www/installation.html
@@ -1,7 +1,7 @@
 <!-- MAIN CONTENT -->
 <h5 class="page-header"><a id="content" name="content">Installation</a></h5>
 
-<p><strong>Current version:</strong> <a href="http://downloads.mozdev.org/systemproxy/systemproxy-1.1.xpi">SystemProxy 1.1</a>. New features:
+<p><strong>Current version:</strong> <a href="http://downloads.mozdev.org/systemproxy/systemproxy-1.1.xpi">SystemProxy 1.1</a>:
     <ul>
         <li><a href="http://getsongbird.com/">Songbird</a> support</li>
         <li>French localization</li>
