--- a/www/index.html
+++ b/www/index.html
@@ -3,8 +3,10 @@
 <div id="infoTabs">
 <div class="infoTab" id="whats-new">
 <h5 class="infoHeader">What's New</h5>
-<ul><li>10.16.08 Version 1.1 is released</li>
-<ul><li>10.14.08 Version 1.0 is released</li>
+<ul>
+<li>11.17.08 Version 1.1.1 is released</li>
+<li>10.16.08 Version 1.1 is released</li>
+<li>10.14.08 Version 1.0 is released</li>
 </ul>
 </div>
 
