--- a/www/installation.html
+++ b/www/installation.html
@@ -1,13 +1,21 @@
 <!-- MAIN CONTENT -->
 <h5 class="page-header"><a id="content" name="content">Installation</a></h5>
 
-<p><strong>Current version:</strong> <a href="http://downloads.mozdev.org/systemproxy/systemproxy-1.1.xpi">SystemProxy 1.1</a>:
+<p><strong>Current version:</strong> <a href="http://downloads.mozdev.org/systemproxy/systemproxy-1.1.1.xpi">SystemProxy 1.1.1</a>:
+   <ul>
+        <li>Updated for <a href="http://getsongbird.com/">Songbird</a> 1.0</li>
+   </ul>
+</p>
+<p><a href="http://downloads.mozdev.org/systemproxy/systemproxy-1.1.xpi">SystemProxy 1.1</a>:
     <ul>
         <li><a href="http://getsongbird.com/">Songbird</a> support</li>
         <li>French localization</li>
     </ul>
+<p><a href="http://downloads.mozdev.org/systemproxy/systemproxy-1.0.xpi">SystemProxy 1.0</a>:
+   <ul>
+        <li>Initial Release</li>
+   </ul>
 </p>
-<p>Previous version: <a href="http://downloads.mozdev.org/systemproxy/systemproxy-1.0.xpi">SystemProxy 1.0</a></p>
 
 <!--<p><a href="https://www.mozdev.org/projects/overview/systemproxy/">Secure Installation for Extensions</a></p>
 
