Updated for systemproxy 1.2

--- a/www/index.html
+++ b/www/index.html
@@ -4,6 +4,7 @@
 <div class="infoTab" id="whats-new">
 <h5 class="infoHeader">What's New</h5>
 <ul>
+<li>06.30.09 Version 1.2 is released</li>
 <li>11.17.08 Version 1.1.1 is released</li>
 <li>10.16.08 Version 1.1 is released</li>
 <li>10.14.08 Version 1.0 is released</li>
