--- a/www/installation.html
+++ b/www/installation.html
@@ -1,7 +1,14 @@
 <!-- MAIN CONTENT -->
 <h5 class="page-header"><a id="content" name="content">Installation</a></h5>
 
-<p><strong>Current version:</strong> <a href="http://downloads.mozdev.org/systemproxy/systemproxy-1.1.1.xpi">SystemProxy 1.1.1</a>:
+<p><strong>Current version:</strong> <a href="http://downloads.mozdev.org/systemproxy/systemproxy-1.2.xpi">SystemProxy 1.2</a>:
+  <ul>
+      <li>Updated for Firefox 3.5</li>
+      <li>Updated for Songbird 1.1</li>
+      <li>German localization</li>
+   </ul>
+</p>
+<p><a href="http://downloads.mozdev.org/systemproxy/systemproxy-1.1.1.xpi">SystemProxy 1.1.1</a>:
    <ul>
         <li>Updated for <a href="http://getsongbird.com/">Songbird</a> 1.0</li>
    </ul>
