--- a/www/index.html
+++ b/www/index.html
@@ -11,15 +11,12 @@
 </ul>
 </div>
 
-<!--
 <div class="infoTab" id="other-stuff">
-<h5 class="infoHeader">Other Stuff</h5>
+<h5 class="infoHeader">Download Counter (30d)</h5>
 <ul>
-<li>stuff goes here</li>
-<li>more stuff goes here</li>
+<li><?php echo downloadsProjectTotals('/systemproxy-1.2.xpi'); ?></li>
 </ul>
 </div>
--->
 
 <!-- alternative image/table base tab works better in NS4 -->
 <!--
