--- a/www/index.html
+++ b/www/index.html
@@ -12,9 +12,9 @@
 </div>
 
 <div class="infoTab" id="other-stuff">
-<h5 class="infoHeader">Download Counter (30d)</h5>
+<h5 class="infoHeader">Other</h5>
 <ul>
-<li><?php echo downloadsProjectTotals('/systemproxy-1.2.xpi'); ?></li>
+<li><?php echo downloadsProjectTotals('/systemproxy-1.2.xpi'); ?> downloads last month</li>
 </ul>
 </div>
 
