--- a/www/installation.html
+++ b/www/installation.html
@@ -1,7 +1,7 @@
 <!-- MAIN CONTENT -->
 <h5 class="page-header"><a id="content" name="content">Installation</a></h5>
 
-<p><strong>Current version:</strong> <a href="http://downloads.mozdev.org/systemproxy/systemproxy-1.2.xpi">SystemProxy 1.2</a> (<?php echo downloadsProjectTotals('/systemproxy-1.2.xpi'); ?> downloads last month):
+<p><strong>Current version:</strong> <a href="http://downloads.mozdev.org/systemproxy/systemproxy-1.2.xpi">SystemProxy 1.2</a>:
   <ul>
       <li>Updated for Firefox 3.5</li>
       <li>Updated for Songbird 1.1</li>
